--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="container">
+        <p><b>Wikimedia</b> is a global <a href="//meta.wikimedia.org/wiki/Wikimedia_movement">movement</a> whose mission is to bring free educational content to the world.</p>
+        
+        <p>
+        Through various <a href="//wikimediafoundation.org/wiki/Our_projects">projects</a>, <a href="//meta.wikimedia.org/wiki/Wikimedia_chapters">chapters</a>, and the support structure of the non-profit Wikimedia Foundation, Wikimedia <a href="//wikimediafoundation.org/wiki/Vision">strives</a> to bring about a world in which every single human being can freely share in the sum of all knowledge.
+        </p>
+        <p class="intro"><b>Welcome to Wikimedia.</b></p>
 
+      <div class="item">
+        <a href="//www.wikipedia.org/" title="Wikipedia The free encyclopedia"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/enwiki-1.5x.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wiktionary.org/" title="Wikitionary"><span class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/270px-WiktionaryEn.svg.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wikiquote.org/" title="Wikiquote"><span class="logo"><img src="https://upload.wikimedia.org/wikipedia/meta/5/5b/Wikiquote-logo_project_2x.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wikibooks.org/e" title="Wikibooks"><span class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikibooks-logo-en-noslogan.svg/270px-Wikibooks-logo-en-noslogan.svg.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://wikisource.org/wiki/Main_Page/" title="Wikipedia The free encyclopedia"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/wikisource.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wikinews.org/" title="Wikinews"><span class="logo"><img src="https://upload.wikimedia.org/wikinews/en/b/bc/Wiki.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wikiversity.org/" title="Wikiversity"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/enwikiversity.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://species.wikimedia.org/wiki/Main_Page" title="Wikispecies"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/specieswiki.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.mediawiki.org/wiki/MediaWiki" title="mediawiki"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/mediawikiwiki.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wikidata.org/wiki/Wikidata:Main_Page" title="wikidata"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/wikidatawiki.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://commons.wikimedia.org/wiki/Main_Page" title="wikimedia commons"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/commonswiki.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wikivoyage.org/" title="wikivoyage"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/wikivoyage.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://meta.wikimedia.org/wiki/Main_Page" title="meta-wiki"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/metawiki-2x.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://incubator.wikimedia.org/wiki/Incubator:Main_Page" title="incubator"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/incubatorwiki.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://wikitech.wikimedia.org/wiki/Main_Page" title="wikitech"><span class="logo"><img src="https://wikitech.wikimedia.org/w/images/c/cf/Labslogo_thumb.png" width="135"></span></a>
+      </div>
+      <div class="item">
+        <a href="https://wikimediafoundation.org/wiki/Home" title="foundation"><span class="logo"><img src="https://www.wikimedia.org/static/images/project-logos/foundationwiki-2x.png" width="135"></span></a>
+      </div>
+    <footer>
+      <p class="commitment-message">Imagine a world in which every single human being can freely share in the sum of all knowledge.<br>Thats our commitment.</p>
+      <ul>
+        <li><a href="https://wikimediafoundation.org/wiki/Terms_of_Use" title="terms of use">Terms of use</a></li>
+        <li><a href="https://wikimediafoundation.org/wiki/Privacy_policy">Privacy policy</a></li>
+      </ul>
+    </footer>
+    </div>
+  </div>
+  </body>
+</html>
